added llm relation scoring via neutral comparison

--- a/notebooks/mlm_for_relations.ipynb
+++ b/notebooks/mlm_for_relations.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Masking"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -60,8 +68,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Completions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +100,8 @@
       "llama_model_load_internal: ggml ctx size =    0.07 MB\n",
       "llama_model_load_internal: mem required  = 14645.09 MB (+ 1026.00 MB per state)\n",
       ".\n",
-      "AVX = 1 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 1 | NEON = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | WASM_SIMD = 0 | BLAS = 0 | SSE3 = 1 | VSX = 0 | \n",
-      "llama_init_from_file: kv self size  =  256.00 MB\n"
+      "llama_init_from_file: kv self size  =  256.00 MB\n",
+      "AVX = 1 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 1 | NEON = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | WASM_SIMD = 0 | BLAS = 0 | SSE3 = 1 | VSX = 0 | \n"
      ]
     }
    ],
@@ -135,6 +151,122 @@
     "    \"role\": \"user\",\n",
     "    \"content\": \"Does this phrase make sense: \\\"a car driving on a road\\\"?\"\n",
     "}], max_tokens=60, top_k=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Perplexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:08<00:00,  4.11s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import LlamaForCausalLM, LlamaTokenizer\n",
+    "import torch\n",
+    "\n",
+    "tokenizer = LlamaTokenizer.from_pretrained(\"../data/models/llama_huggingface\")\n",
+    "model = LlamaForCausalLM.from_pretrained(\"../data/models/llama_huggingface\", low_cpu_mem_usage=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hey, are you consciours? Can you talk to me?\\nI'm a newbie to the forum and I'm looking\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"Hey, are you consciours? Can you talk to me?\"\n",
+    "\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\")\n",
+    "\n",
+    "# Generate\n",
+    "\n",
+    "generate_ids = model.generate(inputs.input_ids, max_length=30)\n",
+    "\n",
+    "tokenizer.batch_decode(generate_ids, skip_special_tokens=True, clean_up_tokenization_spaces=False)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "import reload_recursive\n",
+    "import torch \n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath(\"../src\"))\n",
+    "sys.path.insert(0, os.path.abspath(\"../externals\"))\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    gpu = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    gpu = torch.device(\"mps\")\n",
+    "else:\n",
+    "    print(\"Warning: no GPU detected, falling back to CPU\")\n",
+    "    gpu = torch.device(\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'perplexities': array([ 43.1269455 , 127.78356934, 124.51351166, 317.30755615,\n",
+       "        144.27609253, 140.15206909]),\n",
+       " 'mean_perplexity': 149.52662404378256}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%reload perplexity\n",
+    "from perplexity import perplexity\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    p = perplexity([\"a car driving on a road\", \"a car swimming on a road\", \"a car and a road\", \"a person holding a cat\", \"a person stealing a cat\", \"a person and a cat\"], model, tokenizer, torch.device(\"cpu\"))\n",
+    "\n",
+    "p"
    ]
   }
  ],
