--- a/notebooks/vqa.ipynb
+++ b/notebooks/vqa.ipynb
@@ -75,6 +75,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if \"llm_model\" in locals() or \"llm_model\" in globals():\n",
+    "    del llm_model\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "# %reload model.llama_model\n",
+    "# from model.llama_model import LlamaModel\n",
+    "# llm_model = LlamaModel(\"../data/models/llama_huggingface\")\n",
+    "\n",
+    "%reload model.opt_model\n",
+    "from model.opt_model import OPTModel\n",
+    "llm_model = OPTModel(gpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Clean old model from cache\n",
     "if \"object_detector\" in locals() or \"object_detector\" in globals():\n",
     "    del object_detector\n",
@@ -452,28 +471,28 @@
       "has_attribute(o0, vposition, bottom).\n",
       "\n",
       "{has_relation(o0, to_the_left_of, o1)}.\n",
-      ":~ has_relation(o0, to_the_left_of, o1). [296, (o0, to_the_left_of, o1)]\n",
-      ":~ not has_relation(o0, to_the_left_of, o1). [1359, (o0, to_the_left_of, o1)]\n",
+      ":~ has_relation(o0, to_the_left_of, o1). [246, (o0, to_the_left_of, o1)]\n",
+      ":~ not has_relation(o0, to_the_left_of, o1). [1538, (o0, to_the_left_of, o1)]\n",
       "\n",
       "{has_relation(o0, to_the_left_of, o2)}.\n",
-      ":~ has_relation(o0, to_the_left_of, o2). [325, (o0, to_the_left_of, o2)]\n",
-      ":~ not has_relation(o0, to_the_left_of, o2). [1281, (o0, to_the_left_of, o2)]\n",
+      ":~ has_relation(o0, to_the_left_of, o2). [254, (o0, to_the_left_of, o2)]\n",
+      ":~ not has_relation(o0, to_the_left_of, o2). [1530, (o0, to_the_left_of, o2)]\n",
       "\n",
       "{has_relation(o0, to_the_left_of, o3)}.\n",
-      ":~ has_relation(o0, to_the_left_of, o3). [390, (o0, to_the_left_of, o3)]\n",
-      ":~ not has_relation(o0, to_the_left_of, o3). [1129, (o0, to_the_left_of, o3)]\n",
+      ":~ has_relation(o0, to_the_left_of, o3). [287, (o0, to_the_left_of, o3)]\n",
+      ":~ not has_relation(o0, to_the_left_of, o3). [1454, (o0, to_the_left_of, o3)]\n",
       "\n",
       "{has_relation(o0, to_the_left_of, o4)}.\n",
-      ":~ has_relation(o0, to_the_left_of, o4). [390, (o0, to_the_left_of, o4)]\n",
-      ":~ not has_relation(o0, to_the_left_of, o4). [1129, (o0, to_the_left_of, o4)]\n",
+      ":~ has_relation(o0, to_the_left_of, o4). [287, (o0, to_the_left_of, o4)]\n",
+      ":~ not has_relation(o0, to_the_left_of, o4). [1454, (o0, to_the_left_of, o4)]\n",
       "\n",
       "{has_relation(o0, to_the_left_of, o5)}.\n",
-      ":~ has_relation(o0, to_the_left_of, o5). [735, (o0, to_the_left_of, o5)]\n",
-      ":~ not has_relation(o0, to_the_left_of, o5). [652, (o0, to_the_left_of, o5)]\n",
+      ":~ has_relation(o0, to_the_left_of, o5). [387, (o0, to_the_left_of, o5)]\n",
+      ":~ not has_relation(o0, to_the_left_of, o5). [1957, (o0, to_the_left_of, o5)]\n",
       "\n",
       "{has_relation(o0, to_the_left_of, o6)}.\n",
-      ":~ has_relation(o0, to_the_left_of, o6). [61, (o0, to_the_left_of, o6)]\n",
-      ":~ not has_relation(o0, to_the_left_of, o6). [2821, (o0, to_the_left_of, o6)]\n",
+      ":~ has_relation(o0, to_the_left_of, o6). [122, (o0, to_the_left_of, o6)]\n",
+      ":~ not has_relation(o0, to_the_left_of, o6). [2300, (o0, to_the_left_of, o6)]\n",
       "\n",
       "object(o1).\n",
       "has_object_weight(o1, 3387).\n",
@@ -484,28 +503,28 @@
       "has_attribute(o1, vposition, bottom).\n",
       "\n",
       "{has_relation(o1, to_the_left_of, o0)}.\n",
-      ":~ has_relation(o1, to_the_left_of, o0). [296, (o1, to_the_left_of, o0)]\n",
-      ":~ not has_relation(o1, to_the_left_of, o0). [1359, (o1, to_the_left_of, o0)]\n",
+      ":~ has_relation(o1, to_the_left_of, o0). [246, (o1, to_the_left_of, o0)]\n",
+      ":~ not has_relation(o1, to_the_left_of, o0). [1538, (o1, to_the_left_of, o0)]\n",
       "\n",
       "{has_relation(o1, to_the_left_of, o2)}.\n",
-      ":~ has_relation(o1, to_the_left_of, o2). [325, (o1, to_the_left_of, o2)]\n",
-      ":~ not has_relation(o1, to_the_left_of, o2). [1281, (o1, to_the_left_of, o2)]\n",
+      ":~ has_relation(o1, to_the_left_of, o2). [254, (o1, to_the_left_of, o2)]\n",
+      ":~ not has_relation(o1, to_the_left_of, o2). [1530, (o1, to_the_left_of, o2)]\n",
       "\n",
       "{has_relation(o1, to_the_left_of, o3)}.\n",
-      ":~ has_relation(o1, to_the_left_of, o3). [390, (o1, to_the_left_of, o3)]\n",
-      ":~ not has_relation(o1, to_the_left_of, o3). [1129, (o1, to_the_left_of, o3)]\n",
+      ":~ has_relation(o1, to_the_left_of, o3). [287, (o1, to_the_left_of, o3)]\n",
+      ":~ not has_relation(o1, to_the_left_of, o3). [1454, (o1, to_the_left_of, o3)]\n",
       "\n",
       "{has_relation(o1, to_the_left_of, o4)}.\n",
-      ":~ has_relation(o1, to_the_left_of, o4). [390, (o1, to_the_left_of, o4)]\n",
-      ":~ not has_relation(o1, to_the_left_of, o4). [1129, (o1, to_the_left_of, o4)]\n",
+      ":~ has_relation(o1, to_the_left_of, o4). [287, (o1, to_the_left_of, o4)]\n",
+      ":~ not has_relation(o1, to_the_left_of, o4). [1454, (o1, to_the_left_of, o4)]\n",
       "\n",
       "{has_relation(o1, to_the_left_of, o5)}.\n",
-      ":~ has_relation(o1, to_the_left_of, o5). [702, (o1, to_the_left_of, o5)]\n",
-      ":~ not has_relation(o1, to_the_left_of, o5). [683, (o1, to_the_left_of, o5)]\n",
+      ":~ has_relation(o1, to_the_left_of, o5). [370, (o1, to_the_left_of, o5)]\n",
+      ":~ not has_relation(o1, to_the_left_of, o5). [1972, (o1, to_the_left_of, o5)]\n",
       "\n",
       "{has_relation(o1, to_the_left_of, o6)}.\n",
-      ":~ has_relation(o1, to_the_left_of, o6). [61, (o1, to_the_left_of, o6)]\n",
-      ":~ not has_relation(o1, to_the_left_of, o6). [2821, (o1, to_the_left_of, o6)]\n",
+      ":~ has_relation(o1, to_the_left_of, o6). [122, (o1, to_the_left_of, o6)]\n",
+      ":~ not has_relation(o1, to_the_left_of, o6). [2300, (o1, to_the_left_of, o6)]\n",
       "\n",
       "object(o2).\n",
       "has_object_weight(o2, 1781).\n",
@@ -516,28 +535,28 @@
       "has_attribute(o2, vposition, bottom).\n",
       "\n",
       "{has_relation(o2, to_the_left_of, o0)}.\n",
-      ":~ has_relation(o2, to_the_left_of, o0). [1493, (o2, to_the_left_of, o0)]\n",
-      ":~ not has_relation(o2, to_the_left_of, o0). [254, (o2, to_the_left_of, o0)]\n",
+      ":~ has_relation(o2, to_the_left_of, o0). [882, (o2, to_the_left_of, o0)]\n",
+      ":~ not has_relation(o2, to_the_left_of, o0). [843, (o2, to_the_left_of, o0)]\n",
       "\n",
       "{has_relation(o2, to_the_left_of, o1)}.\n",
-      ":~ has_relation(o2, to_the_left_of, o1). [1493, (o2, to_the_left_of, o1)]\n",
-      ":~ not has_relation(o2, to_the_left_of, o1). [254, (o2, to_the_left_of, o1)]\n",
+      ":~ has_relation(o2, to_the_left_of, o1). [882, (o2, to_the_left_of, o1)]\n",
+      ":~ not has_relation(o2, to_the_left_of, o1). [843, (o2, to_the_left_of, o1)]\n",
       "\n",
       "{has_relation(o2, to_the_left_of, o3)}.\n",
-      ":~ has_relation(o2, to_the_left_of, o3). [1156, (o2, to_the_left_of, o3)]\n",
-      ":~ not has_relation(o2, to_the_left_of, o3). [377, (o2, to_the_left_of, o3)]\n",
+      ":~ has_relation(o2, to_the_left_of, o3). [821, (o2, to_the_left_of, o3)]\n",
+      ":~ not has_relation(o2, to_the_left_of, o3). [665, (o2, to_the_left_of, o3)]\n",
       "\n",
       "{has_relation(o2, to_the_left_of, o4)}.\n",
-      ":~ has_relation(o2, to_the_left_of, o4). [1156, (o2, to_the_left_of, o4)]\n",
-      ":~ not has_relation(o2, to_the_left_of, o4). [377, (o2, to_the_left_of, o4)]\n",
+      ":~ has_relation(o2, to_the_left_of, o4). [821, (o2, to_the_left_of, o4)]\n",
+      ":~ not has_relation(o2, to_the_left_of, o4). [665, (o2, to_the_left_of, o4)]\n",
       "\n",
       "{has_relation(o2, to_the_left_of, o5)}.\n",
-      ":~ has_relation(o2, to_the_left_of, o5). [1184, (o2, to_the_left_of, o5)]\n",
-      ":~ not has_relation(o2, to_the_left_of, o5). [365, (o2, to_the_left_of, o5)]\n",
+      ":~ has_relation(o2, to_the_left_of, o5). [911, (o2, to_the_left_of, o5)]\n",
+      ":~ not has_relation(o2, to_the_left_of, o5). [557, (o2, to_the_left_of, o5)]\n",
       "\n",
       "{has_relation(o2, to_the_left_of, o6)}.\n",
-      ":~ has_relation(o2, to_the_left_of, o6). [1156, (o2, to_the_left_of, o6)]\n",
-      ":~ not has_relation(o2, to_the_left_of, o6). [377, (o2, to_the_left_of, o6)]\n",
+      ":~ has_relation(o2, to_the_left_of, o6). [821, (o2, to_the_left_of, o6)]\n",
+      ":~ not has_relation(o2, to_the_left_of, o6). [665, (o2, to_the_left_of, o6)]\n",
       "\n",
       "object(o3).\n",
       "has_object_weight(o3, 1980).\n",
@@ -548,28 +567,28 @@
       "has_attribute(o3, vposition, bottom).\n",
       "\n",
       "{has_relation(o3, to_the_left_of, o0)}.\n",
-      ":~ has_relation(o3, to_the_left_of, o0). [1659, (o3, to_the_left_of, o0)]\n",
-      ":~ not has_relation(o3, to_the_left_of, o0). [210, (o3, to_the_left_of, o0)]\n",
+      ":~ has_relation(o3, to_the_left_of, o0). [965, (o3, to_the_left_of, o0)]\n",
+      ":~ not has_relation(o3, to_the_left_of, o0). [821, (o3, to_the_left_of, o0)]\n",
       "\n",
       "{has_relation(o3, to_the_left_of, o1)}.\n",
-      ":~ has_relation(o3, to_the_left_of, o1). [1659, (o3, to_the_left_of, o1)]\n",
-      ":~ not has_relation(o3, to_the_left_of, o1). [210, (o3, to_the_left_of, o1)]\n",
+      ":~ has_relation(o3, to_the_left_of, o1). [965, (o3, to_the_left_of, o1)]\n",
+      ":~ not has_relation(o3, to_the_left_of, o1). [821, (o3, to_the_left_of, o1)]\n",
       "\n",
       "{has_relation(o3, to_the_left_of, o2)}.\n",
-      ":~ has_relation(o3, to_the_left_of, o2). [1156, (o3, to_the_left_of, o2)]\n",
-      ":~ not has_relation(o3, to_the_left_of, o2). [377, (o3, to_the_left_of, o2)]\n",
+      ":~ has_relation(o3, to_the_left_of, o2). [821, (o3, to_the_left_of, o2)]\n",
+      ":~ not has_relation(o3, to_the_left_of, o2). [665, (o3, to_the_left_of, o2)]\n",
       "\n",
       "{has_relation(o3, to_the_left_of, o4)}.\n",
-      ":~ has_relation(o3, to_the_left_of, o4). [681, (o3, to_the_left_of, o4)]\n",
-      ":~ not has_relation(o3, to_the_left_of, o4). [705, (o3, to_the_left_of, o4)]\n",
+      ":~ has_relation(o3, to_the_left_of, o4). [583, (o3, to_the_left_of, o4)]\n",
+      ":~ not has_relation(o3, to_the_left_of, o4). [829, (o3, to_the_left_of, o4)]\n",
       "\n",
       "{has_relation(o3, to_the_left_of, o5)}.\n",
-      ":~ has_relation(o3, to_the_left_of, o5). [1624, (o3, to_the_left_of, o5)]\n",
-      ":~ not has_relation(o3, to_the_left_of, o5). [219, (o3, to_the_left_of, o5)]\n",
+      ":~ has_relation(o3, to_the_left_of, o5). [1131, (o3, to_the_left_of, o5)]\n",
+      ":~ not has_relation(o3, to_the_left_of, o5). [484, (o3, to_the_left_of, o5)]\n",
       "\n",
       "{has_relation(o3, to_the_left_of, o6)}.\n",
-      ":~ has_relation(o3, to_the_left_of, o6). [1123, (o3, to_the_left_of, o6)]\n",
-      ":~ not has_relation(o3, to_the_left_of, o6). [393, (o3, to_the_left_of, o6)]\n",
+      ":~ has_relation(o3, to_the_left_of, o6). [804, (o3, to_the_left_of, o6)]\n",
+      ":~ not has_relation(o3, to_the_left_of, o6). [673, (o3, to_the_left_of, o6)]\n",
       "\n",
       "object(o4).\n",
       "has_object_weight(o4, 2004).\n",
@@ -580,28 +599,28 @@
       "has_attribute(o4, vposition, middle).\n",
       "\n",
       "{has_relation(o4, to_the_left_of, o0)}.\n",
-      ":~ has_relation(o4, to_the_left_of, o0). [1659, (o4, to_the_left_of, o0)]\n",
-      ":~ not has_relation(o4, to_the_left_of, o0). [210, (o4, to_the_left_of, o0)]\n",
+      ":~ has_relation(o4, to_the_left_of, o0). [965, (o4, to_the_left_of, o0)]\n",
+      ":~ not has_relation(o4, to_the_left_of, o0). [821, (o4, to_the_left_of, o0)]\n",
       "\n",
       "{has_relation(o4, to_the_left_of, o1)}.\n",
-      ":~ has_relation(o4, to_the_left_of, o1). [1659, (o4, to_the_left_of, o1)]\n",
-      ":~ not has_relation(o4, to_the_left_of, o1). [210, (o4, to_the_left_of, o1)]\n",
+      ":~ has_relation(o4, to_the_left_of, o1). [965, (o4, to_the_left_of, o1)]\n",
+      ":~ not has_relation(o4, to_the_left_of, o1). [821, (o4, to_the_left_of, o1)]\n",
       "\n",
       "{has_relation(o4, to_the_left_of, o2)}.\n",
-      ":~ has_relation(o4, to_the_left_of, o2). [1156, (o4, to_the_left_of, o2)]\n",
-      ":~ not has_relation(o4, to_the_left_of, o2). [377, (o4, to_the_left_of, o2)]\n",
+      ":~ has_relation(o4, to_the_left_of, o2). [821, (o4, to_the_left_of, o2)]\n",
+      ":~ not has_relation(o4, to_the_left_of, o2). [665, (o4, to_the_left_of, o2)]\n",
       "\n",
       "{has_relation(o4, to_the_left_of, o3)}.\n",
-      ":~ has_relation(o4, to_the_left_of, o3). [681, (o4, to_the_left_of, o3)]\n",
-      ":~ not has_relation(o4, to_the_left_of, o3). [705, (o4, to_the_left_of, o3)]\n",
+      ":~ has_relation(o4, to_the_left_of, o3). [583, (o4, to_the_left_of, o3)]\n",
+      ":~ not has_relation(o4, to_the_left_of, o3). [829, (o4, to_the_left_of, o3)]\n",
       "\n",
       "{has_relation(o4, to_the_left_of, o5)}.\n",
-      ":~ has_relation(o4, to_the_left_of, o5). [1184, (o4, to_the_left_of, o5)]\n",
-      ":~ not has_relation(o4, to_the_left_of, o5). [365, (o4, to_the_left_of, o5)]\n",
+      ":~ has_relation(o4, to_the_left_of, o5). [911, (o4, to_the_left_of, o5)]\n",
+      ":~ not has_relation(o4, to_the_left_of, o5). [557, (o4, to_the_left_of, o5)]\n",
       "\n",
       "{has_relation(o4, to_the_left_of, o6)}.\n",
-      ":~ has_relation(o4, to_the_left_of, o6). [643, (o4, to_the_left_of, o6)]\n",
-      ":~ not has_relation(o4, to_the_left_of, o6). [745, (o4, to_the_left_of, o6)]\n",
+      ":~ has_relation(o4, to_the_left_of, o6). [564, (o4, to_the_left_of, o6)]\n",
+      ":~ not has_relation(o4, to_the_left_of, o6). [849, (o4, to_the_left_of, o6)]\n",
       "\n",
       "object(o5).\n",
       "has_object_weight(o5, 2580).\n",
@@ -612,28 +631,28 @@
       "has_attribute(o5, vposition, bottom).\n",
       "\n",
       "{has_relation(o5, to_the_left_of, o0)}.\n",
-      ":~ has_relation(o5, to_the_left_of, o0). [979, (o5, to_the_left_of, o0)]\n",
-      ":~ not has_relation(o5, to_the_left_of, o0). [470, (o5, to_the_left_of, o0)]\n",
+      ":~ has_relation(o5, to_the_left_of, o0). [503, (o5, to_the_left_of, o0)]\n",
+      ":~ not has_relation(o5, to_the_left_of, o0). [2028, (o5, to_the_left_of, o0)]\n",
       "\n",
       "{has_relation(o5, to_the_left_of, o1)}.\n",
-      ":~ has_relation(o5, to_the_left_of, o1). [958, (o5, to_the_left_of, o1)]\n",
-      ":~ not has_relation(o5, to_the_left_of, o1). [483, (o5, to_the_left_of, o1)]\n",
+      ":~ has_relation(o5, to_the_left_of, o1). [493, (o5, to_the_left_of, o1)]\n",
+      ":~ not has_relation(o5, to_the_left_of, o1). [2034, (o5, to_the_left_of, o1)]\n",
       "\n",
       "{has_relation(o5, to_the_left_of, o2)}.\n",
-      ":~ has_relation(o5, to_the_left_of, o2). [493, (o5, to_the_left_of, o2)]\n",
-      ":~ not has_relation(o5, to_the_left_of, o2). [943, (o5, to_the_left_of, o2)]\n",
+      ":~ has_relation(o5, to_the_left_of, o2). [430, (o5, to_the_left_of, o2)]\n",
+      ":~ not has_relation(o5, to_the_left_of, o2). [1060, (o5, to_the_left_of, o2)]\n",
       "\n",
       "{has_relation(o5, to_the_left_of, o3)}.\n",
-      ":~ has_relation(o5, to_the_left_of, o3). [982, (o5, to_the_left_of, o3)]\n",
-      ":~ not has_relation(o5, to_the_left_of, o3). [469, (o5, to_the_left_of, o3)]\n",
+      ":~ has_relation(o5, to_the_left_of, o3). [674, (o5, to_the_left_of, o3)]\n",
+      ":~ not has_relation(o5, to_the_left_of, o3). [823, (o5, to_the_left_of, o3)]\n",
       "\n",
       "{has_relation(o5, to_the_left_of, o4)}.\n",
-      ":~ has_relation(o5, to_the_left_of, o4). [493, (o5, to_the_left_of, o4)]\n",
-      ":~ not has_relation(o5, to_the_left_of, o4). [943, (o5, to_the_left_of, o4)]\n",
+      ":~ has_relation(o5, to_the_left_of, o4). [430, (o5, to_the_left_of, o4)]\n",
+      ":~ not has_relation(o5, to_the_left_of, o4). [1060, (o5, to_the_left_of, o4)]\n",
       "\n",
       "{has_relation(o5, to_the_left_of, o6)}.\n",
-      ":~ has_relation(o5, to_the_left_of, o6). [832, (o5, to_the_left_of, o6)]\n",
-      ":~ not has_relation(o5, to_the_left_of, o6). [571, (o5, to_the_left_of, o6)]\n",
+      ":~ has_relation(o5, to_the_left_of, o6). [599, (o5, to_the_left_of, o6)]\n",
+      ":~ not has_relation(o5, to_the_left_of, o6). [874, (o5, to_the_left_of, o6)]\n",
       "\n",
       "object(o6).\n",
       "has_object_weight(o6, 2708).\n",
@@ -644,28 +663,28 @@
       "has_attribute(o6, vposition, middle).\n",
       "\n",
       "{has_relation(o6, to_the_left_of, o0)}.\n",
-      ":~ has_relation(o6, to_the_left_of, o0). [518, (o6, to_the_left_of, o0)]\n",
-      ":~ not has_relation(o6, to_the_left_of, o0). [904, (o6, to_the_left_of, o0)]\n",
+      ":~ has_relation(o6, to_the_left_of, o0). [395, (o6, to_the_left_of, o0)]\n",
+      ":~ not has_relation(o6, to_the_left_of, o0). [1168, (o6, to_the_left_of, o0)]\n",
       "\n",
       "{has_relation(o6, to_the_left_of, o1)}.\n",
-      ":~ has_relation(o6, to_the_left_of, o1). [518, (o6, to_the_left_of, o1)]\n",
-      ":~ not has_relation(o6, to_the_left_of, o1). [904, (o6, to_the_left_of, o1)]\n",
+      ":~ has_relation(o6, to_the_left_of, o1). [395, (o6, to_the_left_of, o1)]\n",
+      ":~ not has_relation(o6, to_the_left_of, o1). [1168, (o6, to_the_left_of, o1)]\n",
       "\n",
       "{has_relation(o6, to_the_left_of, o2)}.\n",
-      ":~ has_relation(o6, to_the_left_of, o2). [1156, (o6, to_the_left_of, o2)]\n",
-      ":~ not has_relation(o6, to_the_left_of, o2). [377, (o6, to_the_left_of, o2)]\n",
+      ":~ has_relation(o6, to_the_left_of, o2). [821, (o6, to_the_left_of, o2)]\n",
+      ":~ not has_relation(o6, to_the_left_of, o2). [665, (o6, to_the_left_of, o2)]\n",
       "\n",
       "{has_relation(o6, to_the_left_of, o3)}.\n",
-      ":~ has_relation(o6, to_the_left_of, o3). [1123, (o6, to_the_left_of, o3)]\n",
-      ":~ not has_relation(o6, to_the_left_of, o3). [393, (o6, to_the_left_of, o3)]\n",
+      ":~ has_relation(o6, to_the_left_of, o3). [804, (o6, to_the_left_of, o3)]\n",
+      ":~ not has_relation(o6, to_the_left_of, o3). [673, (o6, to_the_left_of, o3)]\n",
       "\n",
       "{has_relation(o6, to_the_left_of, o4)}.\n",
-      ":~ has_relation(o6, to_the_left_of, o4). [643, (o6, to_the_left_of, o4)]\n",
-      ":~ not has_relation(o6, to_the_left_of, o4). [745, (o6, to_the_left_of, o4)]\n",
+      ":~ has_relation(o6, to_the_left_of, o4). [564, (o6, to_the_left_of, o4)]\n",
+      ":~ not has_relation(o6, to_the_left_of, o4). [849, (o6, to_the_left_of, o4)]\n",
       "\n",
       "{has_relation(o6, to_the_left_of, o5)}.\n",
-      ":~ has_relation(o6, to_the_left_of, o5). [1196, (o6, to_the_left_of, o5)]\n",
-      ":~ not has_relation(o6, to_the_left_of, o5). [359, (o6, to_the_left_of, o5)]\n",
+      ":~ has_relation(o6, to_the_left_of, o5). [917, (o6, to_the_left_of, o5)]\n",
+      ":~ not has_relation(o6, to_the_left_of, o5). [554, (o6, to_the_left_of, o5)]\n",
       "\n",
       "\n"
      ]
@@ -675,7 +694,7 @@
     "%reload pipeline.encoding\n",
     "from pipeline.encoding import encode_scene\n",
     "\n",
-    "print(encode_scene(question, model, object_detector))"
+    "print(encode_scene(question, model, object_detector, llm_model))"
    ]
   },
   {
@@ -6738,7 +6757,7 @@
     "    # ctl.configuration.solver.opt_strategy = \"usc,3\"\n",
     "    ctl.add(theory)\n",
     "\n",
-    "    scene_encoding = encode_scene(question, model, object_detector)\n",
+    "    scene_encoding = encode_scene(question, model, object_detector, llm_model)\n",
     "    question_encoding = encode_question(question)\n",
     "\n",
     "    with open(f\"../data/encoded_questions/{qid}.lp\", \"w\") as f:\n",
